# blast-attack

./: .gitignore  .gitmodules  AUTHORS  LICENSE  Makefile  README.md  TODO  meson.build
.github/workflows/: clang-format-check.yml
src/: controller.c  controller.h  hitbox.c  hitbox.h  list.c  list.h  main.c  player.c  player.h  screen.c  screen.h
subprojects/: munit.wrap
test/: controller-test.c  list-test.c
